[package]
name = "judge_server"
version = "0.1.0"
authors = ["passingbreeze <jungmin1237@pusan.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
smallvec = "1.2.0"
num-traits = "0.2.11"
libc = "0.2.68"
autocfg = "1.0.0"
rayon = "1.3.0"
hyper = "0.13"
tokio = { version = "0.2.13", features = ["full"] }
pretty_env_logger = "0.4.0"
